--- a/views/user/userDashboard.ejs
+++ b/views/user/userDashboard.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Evara - eCommerce HTML Template</title>
+    <title>MEDIBUDDY</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,12 +46,10 @@
                             <ul>
                                 <li>
                                     <a class="language-dropdown-active" href="#"> <i class="fi-rs-world"></i> English </a>
-    
                                     <li><i class="fi-rs-user"></i><a href="/userDashboard">User</a></li>
                                     <li><i class="fi-rs-user"></i><a href="/userlogout">SignOUt </a></li>
                                     <li><i class="fi-rs-user"></i><a href="/userSignin">Log In </a></li>
                                     <li><i class="fi-rs-user"></i><a href="/userSignup"> Sign Up</a></li>
-    
                             </ul>
                         </div>
                     </div>
