--- a/views/user/userProduct.ejs
+++ b/views/user/userProduct.ejs
@@ -190,7 +190,7 @@
                                             </a>
                                         </div>
                                         <div class="header-action-icon-2">
-                                            <a class="mini-cart-icon" href="shop-cart.html">
+                                            <a class="mini-cart-icon" href="/userCart">
                                                 <img alt="Evara" src="assets/imgs/theme/icons/icon-cart.svg">
                                                 <span class="pro-count blue">2</span>
                                             </a>
