--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -75,7 +75,7 @@
                           alt="Evara"
                           src="assets/imgs/theme/icons/icon-heart.svg"
                         />
-                        <span class="pro-count blue">4</span>
+                        <span class="pro-count blue"></span>
                       </a>
                     </div>
                     <div class="header-action-icon-2">
@@ -84,13 +84,13 @@
                           alt="Evara"
                           src="assets/imgs/theme/icons/icon-cart.svg"
                         />
-                        <span class="pro-count blue">2</span>
+                        <span class="pro-count blue"></span>
                       </a>
                       <div class="cart-dropdown-wrap cart-dropdown-hm2">
                         <ul>
                           <li>
                             <div class="shopping-cart-img">
-                              <a href="shop-product-right.html"
+                              <a href="#"
                                 ><img
                                   alt="Evara"
                                   src="assets/imgs/shop/thumbnail-3.jpg"
