--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -181,11 +181,13 @@
               </div>
               <div class="col-6">
                 <div class="search-style-2">
-                  <form action="#">
+                  <form action="/searchproduct">
                     <input
                       type="text"
+                      name="searchquery"
                       placeholder="Search for medicines , supplements"
                     />
+
                   </form>
                 </div>
               </div>
