--- a/views/user/userSignin.ejs
+++ b/views/user/userSignin.ejs
@@ -591,6 +591,7 @@
                                             <div class="form-group">
                                                 <button type="submit" class="btn btn-fill-out btn-block hover-up" name="login">Log in</button>
                                             </div>
+                                        <div class="text-muted text-center">Create an account? <a href="/userSignup">Sign up now</a></div>
                                         </form>
                                     </div>
                                 </div>
