--- a/views/user/userCart.ejs
+++ b/views/user/userCart.ejs
@@ -179,7 +179,7 @@
                                         </li>
                                         <li>
                                             <div class="shopping-cart-img">
-                                                <a href="shop-product-right.html"><img alt="Evara" src="assets/imgs/shop/thumbnSail-4.jpg"></a>
+                                                <a href="shop-product-right.html"><img alt="Evara" src="assets/imgs/shop/thumbnail-4.jpg"></a>
                                             </div>
                                             <div class="shopping-cart-title">
                                                 <h4><a href="shop-product-right.html">Macbook Pro 2022</a></h4>
@@ -243,16 +243,15 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-
-<!--  -->
-                                        <td class="image product-thumbnail"><img src="assets/imgs/shop/product-1-2.jpg" alt="#"></td>
+                                    <%for(let i=0;i<userCart.cart.length;i++){%>
+                                    <tr data-wish-id="<%=userCart.cart[i].productId._id%>">
+                                        <td class="image product-thumbnail"><img src="/admin-assets/product/<%= userCart.cart[i].productId.image[0]%>" alt="#"></td>
                                         <td class="product-des product-name">
-                                            <h5 class="product-name"><a href="shop-product-right.html">J.Crew Mercantile Women's Short-Sleeve</a></h5>
-                                            <p class="font-xs">Maboriosam in a tonto nesciung eget<br> distingy magndapibus.
+                                            <h5 class="product-name"><a href="shop-product-right.html"><%=userCart.cart[i].productId.productName%></a></h5>
+                                            <p class="font-xs"><%=userCart.cart[i].productId.category%><br> <%=userCart.cart[i].productId.brandName%>
                                             </p>
                                         </td>
-                                        <td class="price" data-title="Price"><span>$65.00 </span></td>
+                                        <td class="price" data-title="Price"><span><%=userCart.cart[i].productId.salePrice%></span></td>
                                         <td class="text-center" data-title="Stock">
                                             <div class="detail-qty border radius  m-auto">
                                                 <a href="#" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
@@ -261,10 +260,11 @@
                                             </div>
                                         </td>
                                         <td class="text-right" data-title="Cart">
-                                            <span>$65.00 </span>
+                                            <span><%=userCart.cart[i].productId.salePrice%></span>
                                         </td>
-                                        <td class="action" data-title="Remove"><a href="#" class="text-muted"><i class="fi-rs-trash"></i></a></td>
+                                        <td class="action" data-title="Remove"><a  onclick="removeItem('<%=userCart.cart[i].productId._id%>')" class="text-muted"><i class="fi-rs-trash"></i></a></td>
                                     </tr>
+                                    <%}%>
 
 
 
@@ -427,6 +427,13 @@
         </div>
     </footer>
 
+    <script>
+        function removeItem(productId) {
+        
+        }
+            
+        
+    </script>
     <!-- Vendor JS-->
     <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
