--- a/views/admin/adminProductmanagement.ejs
+++ b/views/admin/adminProductmanagement.ejs
@@ -50,17 +50,10 @@
                         <span class="text">Product Management</span>
                     </a>
                 </li>
-                <li class="menu-item has-submenu">
-                    <a class="menu-link" href="page-orders-1.html"> <i class="icon material-icons md-shopping_cart"></i>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/ordermanagement"> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Orders</span>
                     </a>
-                    <div class="submenu">
-                        <a href="page-orders-1.html">Order list 1</a>
-                        <a href="page-orders-2.html">Order list 2</a>
-                        <a href="page-orders-detail.html">Order detail</a>
-                        <a href="page-orders-tracking.html">Order tracking</a>
-                        <a href="page-invoice.html">Invoice</a>
-                    </div>
                 </li>
                 <li class="menu-item has-submenu">
                     <a class="menu-link" href="page-sellers-cards.html"> <i class="icon material-icons md-store"></i>
@@ -195,7 +188,7 @@
                                               <td><%= products[i].isListed %></td>
                                               <td><%= products[i].quantity %></td>
                                               <td> <div class="d-flex "><a href="/admin/productEdit?pid=<%=products[i]._id%>" class="btn-sm btn-dark me-auto">Edit</a> 
-                                                <a type="button" href="/admin/productDelete?pid=<%=products[i]._id%>" class="btn-sm btn-danger">Delete</a></div>
+                                                <a type="button" href="/admin/productDelete?pid=<%=products[i]._id%>" class="btn-sm btn-danger">Unlist</a></div>
                                             </tr>
                                             <% } %>
                                   </table>
