--- a/views/admin/adminLogin.ejs
+++ b/views/admin/adminLogin.ejs
@@ -40,10 +40,10 @@
                     <h4 class="card-title mb-4">Sign in</h4>
                     <form method="post" id="adminLoginform" action="/admin/login">
                         <div class="mb-3">
-                            <input class="form-control" placeholder="Username " required="true" aria-required="true" name="email" id="email" type="text">
+                            <input class="form-control" placeholder="Username " value="admin@medibuddy.com" required="true" aria-required="true" name="email" id="email" type="text">
                         </div> <!-- form-group// -->
                         <div class="mb-3">
-                            <input class="form-control" placeholder="Password" id="password" required="true" aria-required="true" name="password" type="password">
+                            <input class="form-control" placeholder="Password" value="456456" id="password" required="true" aria-required="true" name="password" type="password">
                         </div> <!-- form-group// -->
                         <div class="mb-3">
                             <label class="form-check">
