--- a/views/admin/adminProductedit.ejs
+++ b/views/admin/adminProductedit.ejs
@@ -50,17 +50,10 @@
                         <span class="text">Product Management</span>
                     </a>
                 </li>
-                <li class="menu-item has-submenu">
-                    <a class="menu-link" href="#"> <i class="icon material-icons md-shopping_cart"></i>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/ordermanagement"> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Orders</span>
                     </a>
-                    <div class="submenu">
-                        <a href="page-orders-1.html">Order list 1</a>
-                        <a href="page-orders-2.html">Order list 2</a>
-                        <a href="page-orders-detail.html">Order detail</a>
-                        <a href="page-orders-tracking.html">Order tracking</a>
-                        <a href="page-invoice.html">Invoice</a>
-                    </div>
                 </li>
                 <li class="menu-item has-submenu">
                     <a class="menu-link" href="page-form-product-1.html"> <i class="icon material-icons md-add_box"></i>
@@ -156,7 +149,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="row">   
-                                                <form method="post" action="/updateProductdata" enctype="multipart/form-data">
+                                                <form method="post" action="/admin/updateProductdata?pid=<%=productdata[0]._id%>">
                                                     <div class="row">
                                                         <div class="form-group col-md-6">
                                                             <label>Product Name <span class="required">*</span></label>
@@ -179,9 +172,6 @@
                                                             
                                                         </div>
 
-
-
-
                                                         <div class="form-group col-md-12">
                                                             <label>Description <span class="required">*</span></label>
                                                             <input required="true"   class="form-control square" id="description" value="<%= productdata[0].description%>" name="description" type="text">
@@ -199,17 +189,9 @@
                                                             <input required="true"  class="form-control square" id="product-quantity" value="<%= productdata[0].quantity %>" name="productquantity" type="number">
                                                         </div>
 
-                                                        <div class=" mb-4">
-                                                            <div class="card-header">
-                                                                <h4>Media</h4>
-                                                            </div>
 
-                                                            <div class="input-upload">
-                                                                <img src="/assetsbackend/assets/imgs/theme/upload.svg" alt="">
-                                                                <input multiple required="true" name="image" id="image" type="file" class="form-control" type="file">
-                                                            </div>
                                                         <div class="col-md-12">
-                                                            <button type="submit" class="btn btn-danger mt-3 submit" name="submit" value="Submit">Add Product</button>
+                                                            <button type="submit" class="btn btn-danger mt-3 submit" name="submit" value="Submit">Update Product</button>
                                                         </div>
                                                     </div>
                                                 </form>
