--- a/views/user/usersignupwithOtp.ejs
+++ b/views/user/usersignupwithOtp.ejs
@@ -630,7 +630,7 @@
                                         <div class="divider-text-center mt-15 mb-15">
                                             <span> or</span>
                                         </div>
-                                        <div class="text-muted text-center">Already have an account? <a href="#">Sign in now</a></div>
+                                        <div class="text-muted text-center">Already have an account? <a href="/userSignin">Sign in now</a></div>
                                     </div>
                                 </div>
                             </div>
