--- a/views/user/userorderdetails.ejs
+++ b/views/user/userorderdetails.ejs
@@ -658,13 +658,13 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="m-auto">
+                                    <!-- <div class="m-auto">
                                         <% if (order.orderStatus === "DELIVERED") { %>
                                             <a class="btn btn-primary m-5"   href="/orderreturn?ordrid=<%= order._id %>">RETURN ORDER</a>
                                         <% } else if (order.orderStatus !== "CANCELLED" && order.orderStatus !== "RETURNED") { %>
                                             <a class="btn btn-primary m-5" href="/ordercancel?ordrid=<%= order._id %>">CANCEL ORDER</a>
                                         <% } %>
-                                    </div>
+                                    </div> -->
                                 </div>
 
                             </div>
