--- a/views/admin/adminOrderdetails.ejs
+++ b/views/admin/adminOrderdetails.ejs
@@ -116,35 +116,33 @@
             <div class="content-header">
                 <div>
                     <h2 class="content-title card-title">Order detail</h2>
-                    <p>Details for Order ID: 3453012</p>
+                    <p>Details for Order ID: <%=order._id%></p>
                 </div>
             </div>
             <div class="card">
-                <header class="card-header">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6 col-md-6 mb-lg-0 mb-15">
-                            <span>
-                                <i class="material-icons md-calendar_today"></i> <b><%=String(order.createdAt).slice(0,16)%></b>
-                            </span> <br>
-                            <small class="text-muted">Order ID: <%=String(order._id).slice(-6)%></small>
-                        </div>
-                        <div class="col-lg-6 col-md-6 ms-auto text-md-end">
-                            <form action="/admin/change-status/<%=order._id%>" method="post">
-                                <span>Order Status: </span>
-                                <select aria-placeholder="Order Status" class="form-select d-inline-block mb-lg-0 mb-15 mw-200" name="status">
-                                  <option <%if(order.orderStatus=== "PENDING") { %> selected <% } %> value="PENDING">PENDING</option>
-                                    <option <%if(order.orderStatus=== "PLACED") { %> selected <% } %> value="PLACED">PLACED</option>
-                                    <option <%if(order.orderStatus=== "CANCELLED") { %> selected <% } %> value="CANCELLED">CANCELLED</option>
-                                    <option <%if(order.orderStatus=== "DELIVERED") { %> selected <% } %> value="DELIVERED">DELIVERED</option>
-                                </select>
-                                <input type="hidden" name="id"  value="<%=order._id%>">
-                                <button type="submit" class="btn btn-primary">Save</button>
-                                <!-- <a class="btn btn-primary" href="#">Save</a> -->
-                            </form>
-                            <a class="btn btn-secondary print ms-2" href="#"><i class="icon material-icons md-print"></i></a>
-                        </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-6 mb-lg-0 mb-15">
+                        <span>
+                            <i class="material-icons md-calendar_today"></i> <b><%=String(order.createdAt).slice(0,16)%></b>
+                        </span> <br>
+                        <small class="text-muted">Order ID: <%=String(order._id).slice(-6)%></small>
                     </div>
-                </header> <!-- card-header end// -->
+                    <div class="col-lg-6 col-md-6 ms-auto text-md-end">
+                        <form action="/admin/change-status/<%=order._id%>" method="post">
+                            <span>Order Status: </span>
+                            <select aria-placeholder="Order Status" class="form-select d-inline-block mb-lg-0 mb-15 mw-200" name="status">
+                              <option <%if(order.orderStatus=== "PENDING") { %> selected <% } %> value="PENDING">PENDING</option>
+                                <option <%if(order.orderStatus=== "PLACED") { %> selected <% } %> value="PLACED">PLACED</option>
+                                <option <%if(order.orderStatus=== "CANCELLED") { %> selected <% } %> value="CANCELLED">CANCELLED</option>
+                                <option <%if(order.orderStatus=== "DELIVERED") { %> selected <% } %> value="DELIVERED">DELIVERED</option>
+                            </select>
+                            <input type="hidden" name="id"  value="<%=order._id%>">
+                            <button type="submit" class="btn btn-primary">Save</button>
+                            <!-- <a class="btn btn-primary" href="#">Save</a> -->
+                        </form>
+                        <a class="btn btn-secondary print ms-2" href="#"><i class="icon material-icons md-print"></i></a>
+                    </div>
+                </div>
                 <div class="card-body">
                     <div class="row mb-50 mt-20 order-info-wrap">
                         <div class="col-md-4">
@@ -235,7 +233,7 @@
                                         <table class="table">
                                             <tbody>
                                                 <tr>
-                                                    <td class="cart_total_label">Cart Subtotal</td>
+                                                    <td class="cart_total_label">Total</td>
                                                     <td class="cart_total_amount"><span class="font-lg fw-900 text-brand">₹<%=sum%></span></td>
                                                 </tr>
                                                 <tr>
@@ -252,6 +250,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
     </main>
     <script src="/assetsbackend/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="/assetsbackend/js/vendors/bootstrap.bundle.min.js"></script>
