--- a/views/admin/adminOrderview.ejs
+++ b/views/admin/adminOrderview.ejs
@@ -113,73 +113,108 @@
             <br>
         </nav>
     </aside>
-    
-        <section class="content-main">
-            <div class="content-header">
-                <div>
-                    <h2 class="content-title card-title">Order List </h2>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div>
-                    <input type="text" placeholder="Search order ID" class="form-control bg-white">
-                </div>
-            </div>
-            <div class="card ps-50 mb-4">
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-hover" id="dataTable">
-                            <thead>
-                                <tr>
-                                    <th>#ID</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col">Total</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col" class="text-end"> Action </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <%for(let i=0;i<order.length;i++) {%>
-                                <tr>
-                                    <td><%=String(order[i]._id).slice(-6)%></td>
-                                    <td><b><%= order[i].customerId.name %></b></td>
-                                    <td><%= order[i].customerId.email %></td>
-                                    <td><%=order[i].totalAmount%></td>
-                                    <td>
-                                        <span
-                                            <% if (order[i].orderStatus === "PENDING") { %>
-                                                class="badge rounded-pill alert-warning"
-                                            <% } else if (order[i].orderStatus === 'DELIVERED') { %>
-                                                class="badge rounded-pill alert-success"
-                                            <% } else if (order[i].orderStatus === "CANCELLED") { %>
-                                                class="badge rounded-pill alert-danger"
-                                            <% } else if (order[i].orderStatus === "RETURNED") { %>
-                                                class="badge rounded-pill alert-secondary"
-                                            <% } else if (order[i].orderStatus === "PLACED") { %>
-                                                class="badge rounded-pill alert-info"
-                                            <% } %>
-                                        >
-                                            <%= order[i].orderStatus %>
-                                        </span>
-                                    </td>
-                                    <td><%=String(order[i].createdAt).slice(4, 16)%></td>
-                                    <td class="text-end">
-                                        <a href="#" class="btn btn-md rounded font-sm">Edit</a>
-                                        
-                                    </td>
-                                </tr>
 
-                                <% } %>
-                               
-                            </tbody>
-                        </table>
-                    </div> <!-- table-responsive //end -->
-                </div> <!-- card-body end// -->
-            </div> <!-- card end// -->
+        <main class="main-wrap">
+            <header class="main-header navbar">
+                <div class="col-search">
+                </div>
+                <div class="col-nav">
+                    <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
+                    <ul class="nav">
+                        <li class="dropdown nav-item">
+                            <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="/assetsbackend/imgs/people/avatar2.jpg" alt="User"></a>
+                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
+                                <a class="dropdown-item text-danger" href="/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </header>
+            <section class="content-main">
+                <section class="content-main">
+                    <div class="content-header">
+                        <div>
+                            <h2 class="content-title card-title">Order Management </h2>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row">   
+                                
+
+
+                                <div class="table-responsive">
+                                    <table class="table table-hover" id="dataTable">
+                                        <thead>
+                                            <tr>
+                                                <th>#ID</th>
+                                                <th scope="col">Name</th>
+                                                <th scope="col">Email</th>
+                                                <th scope="col">Total</th>
+                                                <th scope="col">Status</th>
+                                                <th scope="col">Date</th>
+                                                <th scope="col" class="text-end"> Action </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <%for(let i=0;i<order.length;i++) {%>
+                                            <tr>
+                                                <td><%=String(order[i]._id).slice(-6)%></td>
+                                                <td><b><%= order[i].customerId.name %></b></td>
+                                                <td><%= order[i].customerId.email %></td>
+                                                <td><%=order[i].totalAmount%></td>
+                                                <td>
+                                                    <span
+                                                        <% if (order[i].orderStatus === "PENDING") { %>
+                                                            class="badge rounded-pill alert-warning"
+                                                        <% } else if (order[i].orderStatus === 'DELIVERED') { %>
+                                                            class="badge rounded-pill alert-success"
+                                                        <% } else if (order[i].orderStatus === "CANCELLED") { %>
+                                                            class="badge rounded-pill alert-danger"
+                                                        <% } else if (order[i].orderStatus === "RETURNED") { %>
+                                                            class="badge rounded-pill alert-secondary"
+                                                        <% } else if (order[i].orderStatus === "PLACED") { %>
+                                                            class="badge rounded-pill alert-info"
+                                                        <% } %>
+                                                    >
+                                                        <%= order[i].orderStatus %>
+                                                    </span>
+                                                </td>
+                                                <td><%=String(order[i].createdAt).slice(4, 16)%></td>
+                                                <td class="text-end">
+                                                    <a href="/admin/orderdetails?ordrid=<%= order[i]._id%>" class="btn btn-md rounded font-sm">Edit</a>
+                                                    
+                                                </td>
+                                            </tr>
             
-        </section> <!-- content-main end// -->
+                                            <% } %>
+                                           
+                                        </tbody>
+                                    </table>
+                                </div> <!-- table-responsive //end -->
 
+
+
+
+                            </div> <!-- .row // -->
+                        </div> <!-- card body .// -->
+                    </div> <!-- card .// -->
+            </section> <!-- content-main end// -->
+            <footer class="main-footer font-xs">
+                <div class="row pb-30 pt-15">
+                    <div class="col-sm-6">
+                        <script>
+                        document.write(new Date().getFullYear())
+                        </script> ©
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="text-sm-end">
+                            All rights reserved
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </main>
     </main>
     <script src="/assetsbackend/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="/assetsbackend/js/vendors/bootstrap.bundle.min.js"></script>
