--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -67,72 +67,18 @@
                       </a>
                     </div>
                     <div class="header-action-icon-2">
-                      <a class="mini-cart-icon" href="/userCart">
+                      <!-- <a onclick="userCart('<%=user%>')" id="user" class="mini-cart-icon" > -->
+                        <a  id="user" class="mini-cart-icon" href="/userCart">
                         <img
                           alt="Evara"
                           src="assets/imgs/theme/icons/icon-cart.svg"
                         />
                         <%if(user){%>
-                        <span class="pro-count blue"><%=user.cart.length??0%></span>
+                        <span id="clength" class="pro-count blue"><%=user.cart.length??0%></span>
                         <%}else{%>
                           <span class="pro-count blue">0</span>
                         <%}%>
                       </a>
-                      <div class="cart-dropdown-wrap cart-dropdown-hm2">
-                        <ul>
-                          <li>
-                            <div class="shopping-cart-img">
-                              <a href="#"
-                                ><img
-                                  alt="Evara"
-                                  src="assets/imgs/shop/thumbnail-3.jpg"
-                              /></a>
-                            </div>
-                            <div class="shopping-cart-title">
-                              <h4>
-                                <a href="shop-product-right.html"
-                                  >Daisy Casual Bag</a
-                                >
-                              </h4>
-                              <h4><span>1 × </span>$800.00</h4>
-                            </div>
-                            <div class="shopping-cart-delete">
-                              <a href="#"><i class="fi-rs-cross-small"></i></a>
-                            </div>
-                          </li>
-                          <li>
-                            <div class="shopping-cart-img">
-                              <a href="shop-product-right.html"
-                                ><img
-                                  alt="Evara"
-                                  src="assets/imgs/shop/thumbnail-2.jpg"
-                              /></a>
-                            </div>
-                            <div class="shopping-cart-title">
-                              <h4>
-                                <a href="shop-product-right.html"
-                                  >Corduroy Shirts</a
-                                >
-                              </h4>
-                              <h4><span>1 × </span>$3200.00</h4>
-                            </div>
-                            <div class="shopping-cart-delete">
-                              <a href="#"><i class="fi-rs-cross-small"></i></a>
-                            </div>
-                          </li>
-                        </ul>
-                        <div class="shopping-cart-footer">
-                          <div class="shopping-cart-total">
-                            <h4>Total <span>$4000.00</span></h4>
-                          </div>
-                          <div class="shopping-cart-button">
-                            <a href="shop-cart.html" class="outline"
-                              >View cart</a
-                            >
-                            <a href="shop-checkout.html">Checkout</a>
-                          </div>
-                        </div>
-                      </div>
                     </div>
                   </div>
                 </div>
@@ -2821,6 +2767,16 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Template  JS -->
     <script>
+//       function userCart(user)
+//       {
+// if(user)
+// {
+//   $.ajax({
+//     method:'POST',
+//     url:'/',
+// }
+//       }
+//     }
 function addtoWishlist(productid)
 {
   $.ajax({
@@ -2874,8 +2830,15 @@ function addtoCart(productid)
                             });
                 }
                 else if(res.toCart){
+                  if(typeof(res.cartcount)=="number")
+                  {
+                    alert(res.cartcount);
+                    document.getElementById("clength").innerHTML(res.cartcount);
+                  }
+
                   Swal.fire(
-                              'Item added to cart'
+                              'Item added to cart',
+                              
                             );
                 }
                 else{
