--- a/views/user/userSearchitems.ejs
+++ b/views/user/userSearchitems.ejs
@@ -180,13 +180,17 @@
                       </div>
                     </div>
                     <div class="col-6">
-                      <div class="search-style-2">
-                        <form action="#">
-                          <input
-                            type="text"
-                            placeholder="Search for medicines , supplements"
-                          />
-                        </form>
+                      <div style="border-style: solid; border-color: black; border-radius: 10px;" class="col-6">
+                        <div class="search-style-2" >
+                          <form action="/searchproduct">
+                            <input
+                              type="text"
+                              name="searchquery"
+                              placeholder="Search for medicines , supplements"
+                            />
+        
+                          </form>
+                        </div>
                       </div>
                     </div>
                     <div
