--- a/views/user/forgotpassword.ejs
+++ b/views/user/forgotpassword.ejs
@@ -577,7 +577,7 @@
                                                 <input type="email" id="email" required="true" name="email"  placeholder="Your Email">
                                             </div>                                            
                                             <div class="form-group">
-                                                <input type="text"  required="" name="password"  id="password" placeholder="enter password">
+                                                <input type="password"  required="" name="password"  id="password" placeholder="enter password">
                                             </div>
                                             <div class="form-group">
                                                 <input type="text"  required="" name="rpassword"  id="rpassword" placeholder="re-enter password">
