--- a/views/user/userDashboard.ejs
+++ b/views/user/userDashboard.ejs
@@ -771,7 +771,6 @@
 
                             <div class="col-md-8">
                                 <div class="tab-content dashboard-content">
-
                                     <div class="tab-pane fade active "  id="orders" role="tabpanel" aria-labelledby="orders-tab">
                                         <div class="card">
                                             <div class="card-header">
@@ -791,8 +790,7 @@
                                                             </tr>
                                                         </thead>
                                                         <tbody>
-                                                            <%
-                                                            for(let i=0;i<order.length;i++){%>
+                                                            <%for(let i=0;i<order.length;i++){%>
                                                                 <tr>
                                                                     <td>ODR-<%=String(order[i]._id).slice(-10)%></td>
                                                                     <td><%= String(order[i].createdAt).slice(4, 16) %></td>
@@ -801,7 +799,7 @@
                                                                     <td>₹ <%=order[i].totalAmount%> </td>
                                                                     <td><a href="/orderdetails?ordid=<%=order[i]._id%>" class="btn-small d-block">View</a></td>
                                                                 </tr>
-                                                                <% } %>
+                                                            <% } %>
                                                         </tbody>
                                                     </table>
                                                 </div>
@@ -862,8 +860,8 @@
                                                 </div>
                                                 <%}%>
                                             </div>
-                                        </div>
                                     </div>
+                                </div>
                                     <div class="tab-pane fade " id="account-detail" role="tabpanel" aria-labelledby="account-detail-tab">
                                         <div class="card">
                                             <div class="card-header">
