--- a/views/user/userallProduct.ejs
+++ b/views/user/userallProduct.ejs
@@ -304,36 +304,33 @@
                 </div>
             </div>
         </div>
-
-
-
         <section class="mt-50 mb-50">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-9">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-9">
                         <div class="shop-product-fillter">
                             <div class="totall-product">
                                 <p> We found <strong class="text-brand"><%=product.length%></strong> items for you!</p>
                             </div>
                             <div class="sort-by-product-area">
                                 <div class="sort-by-cover mr-10">
-                                    <div class="sort-by-product-wrap">
+                                    <!-- <div class="sort-by-product-wrap">
                                         <div class="sort-by">
                                             <span><i class="fi-rs-apps"></i>Show:</span>
                                         </div>
-                                        <div class="sort-by-dropdown-wrap">
+                                         <div class="sort-by-dropdown-wrap">
                                             <span> 5 <i class="fi-rs-angle-small-down"></i></span>
                                         </div>
                                     </div>
                                     <div class="sort-by-dropdown">
                                         <ul>
                                             <li><a class="active" href="#">5</a></li>
-                                            <!-- <li><a href="#">100</a></li>
+                                            <li><a href="#">100</a></li>
                                             <li><a href="#">150</a></li>
                                             <li><a href="#">200</a></li>
-                                            <li><a href="#">All</a></li> -->
+                                            <li><a href="#">All</a></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="sort-by-cover">
                                     <div class="sort-by-product-wrap">
@@ -346,8 +343,8 @@
                                     </div>
                                     <div class="sort-by-dropdown">
                                         <ul>
-                                            <li><a class="active" href="#">Featured</a></li>
-                                            <li><a href="#">Price: Low to High</a></li>
+                                          <li><a class="active" href="#">Featured</a></li>
+                                          <li><a  href="#">Price: Low to High</a></li>
                                             <li><a href="#">Price: High to Low</a></li>
                                             <li><a href="#">Release Date</a></li>
                                             <li><a href="#">Avg. Rating</a></li>
@@ -356,17 +353,62 @@
                                 </div>
                             </div>
                         </div>
+                        <!--  -->
+                        <div class="row product-grid-3">
+                          <% for (let i = 0; i < product.length; i++) { %>
+                          <div class="col-lg-4 col-md-4 col-12 col-sm-6">
+                              <div class="product-cart-wrap mb-30">
+                                  <div class="product-img-action-wrap">
+                                      <div class="product-img product-img-zoom">
+                                          <a href="/userShopproduct?pid=<%= product[i]._id%>">
+                                              <img class="default-img" src="/admin-assets/product/<%= product[i].image[0]%>" alt="">
+                                              <img class="hover-img" src="/admin-assets/product/<%= product[i].image[0]%>" alt="">
+                                          </a>
+                                      </div>
+                                      <div class="product-action-1">
+                                          <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal">
+                                          <i class="fi-rs-search"></i></a>
+                                          <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
+                                          <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
+                                      </div>
+                                      <div class="product-badges product-badges-position product-badges-mrg">
+                                          <span class="hot">Hot</span>
+                                      </div>
+                                  </div>
+                                  <div class="product-content-wrap">
+                                      <div class="product-category">
+                                          <a href="#"><%= product[i].category%></a>
+                                      </div>
+                                      <h2><a href="/userShopproduct?pid=<%= product[i]._id%>">
+                                      <%= product[i].productName%></a></h2>
+                                      <div class="rating-result" title="90%">
+                                          <span>
+                                              <span>90%</span>
+                                          </span>
+                                      </div>
+                                      <div class="product-price">
+                                          <span>&#8377;<%= product[i].salePrice%></span>
+                                          <span class="old-price">&#8377;<%= product[i].regularPrice%></span>
+                                      </div>
+                                      <div class="product-action-1 show">
+                                          <a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html"><i class="fi-rs-shopping-bag-add"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                          <%}%>
+                      </div>
                         <!--pagination-->
-                        <div class="pagination-area mt-15 mb-sm-5 mb-lg-0">
+                        <div style="align-items:center ;" class="pagination-area mt-15 mb-sm-5 mb-lg-0">
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination justify-content-start">
-                                    <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">02</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">03</a></li>
-                                    <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">16</a></li>
-                                    <li class="page-item"><a class="page-link" href="#"><i class="fi-rs-angle-double-small-right"></i></a></li>
-                                </ul>
+                                  <%for(let i=1;i<=totalPages;i++){%>
+                                    <%if(page==i){%>
+                                    <li class="page-item active"><a class="page-link" href="<%=pathurl+"?page="+i%>"><%=i%></a></li>
+                                    <%} else {%>
+                                    <li class="page-item "><a class="page-link" href="<%=pathurl+"?page="+i%>"><%=i%></a></li>
+                                  <%}}%>
+                                  </ul>
                             </nav>
                         </div>
                     </div>
@@ -479,10 +521,10 @@
                                 <a href="shop-grid-right.html/4556465">Shop Now <i class="fi-rs-arrow-right"></i></a>
                             </div>
                         </div> -->
-                    </div>
-                </div>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="main">
         <section class="newsletter p-30 text-white wow fadeIn animated">
